--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 BOT_TOKEN=8179443658:AAGeoe3hzy1ObM0c4KdfYYPLQVmF4qd0j98
-CHANNEL_USERNAME=@V_i_V_52
+CHANNEL_USERNAME=@RoRoytarzam
 ADMIN_ID=7210057243
